<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#0000C6">
        
        <ImageView 
            android:id="@+id/booking_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:clickable="true"
            android:contentDescription="@string/desc"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textSize="10pt"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/login_title"/>
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView 
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="35dip"
        android:text="@string/name_text"
        android:textSize="10pt"/>
    
    <EditText 
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:hint="@string/hint"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/name_text"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"/>
    <TextView 
        android:id="@+id/text_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="50dip"
        android:textSize="10pt"
        android:text="@string/psw_text"/>

    <EditText
        android:id="@+id/edit_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="125dip"
        android:layout_toRightOf="@id/text_psw"
        android:hint="@string/hint_psw"
        android:inputType="textPassword" />

    <Button 
        android:id="@+id/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_psw"
        android:gravity="center"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="50dip"
        android:text="@string/btn_login"/>
    </RelativeLayout>
</LinearLayout>
