<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#0000C6">
        
        <ImageView 
            android:id="@+id/booking_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:clickable="true"
            android:contentDescription="@string/desc"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textSize="10pt"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/modify_user_psw_text"/>
    </LinearLayout>

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/modify_user_psw_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/modify_psw_text"/>

        <EditText
            android:id="@+id/modify_user_psw_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modify_user_psw_txt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/modify_psw_hint"
            android:inputType="textPassword" />

        <Button 
            android:id="@+id/modify_user_psw_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/modify_user_psw_edit"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/modify_psw_btn"
            android:textSize="15sp"/>
        
    </RelativeLayout>
    
</LinearLayout>