<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#0000C6">
        
        <ImageView 
            android:id="@+id/booking_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:clickable="true"
            android:contentDescription="@string/desc"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textSize="10pt"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/manage_title"/>
    </LinearLayout>
    <ImageButton 
        android:id="@+id/manager_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/manage_login"
        android:contentDescription="@string/desc"/>
    <TextView 
        android:id="@+id/manager_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_login_text"
        android:layout_marginLeft="20dp"/>
    <ImageButton 
        android:id="@+id/manager_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/manage_reg"
        android:contentDescription="@string/desc"/>
     <TextView 
        android:id="@+id/manager_reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_reg_text"
        android:layout_marginLeft="20dp"/>
    
</LinearLayout>