<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#0000C6">
        
        <ImageView 
            android:id="@+id/booking_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:clickable="true"
            android:contentDescription="@string/desc"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:textSize="10pt"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/member_data"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView 
        android:id="@+id/mem_data_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mem_data_username"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>
    
    <TextView 
        android:id="@+id/mem_data_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/mem_data_username_text"/>
    <Button 
        android:id="@+id/mem_data_modify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/mem_data_username_text"
        android:text="@string/mem_data_modify"/>
    </RelativeLayout>

</LinearLayout>
