<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    

    
        <TextView 
            android:id="@+id/get_plane_info_way_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/get_plane_info_way_text"/>
        <TextView 
            android:id="@+id/get_plane_info_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/get_plane_info_way_text"/>
        <TextView 
            android:id="@+id/get_plane_info_single_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/get_plane_info_from_text"
            android:text="@string/get_plane_info_single_text"/>
        <TextView 
            android:id="@+id/get_plane_info_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/get_plane_info_single_text"/>
        
        <TextView 
            android:id="@+id/get_plane_info_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/get_plane_info_way_text"
            android:text="@string/time_user_ticket_info_text"/>
        <TextView 
            android:id="@+id/get_plane_info_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/get_plane_info_time_text"
            android:layout_below="@id/get_plane_info_way_text"/>
        <Button 
            android:id="@+id/mBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/mBtnText"/>
    
    
</RelativeLayout>