<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">
        
        <TableLayout 
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/main_tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">
            
            <TableRow >
                <ImageButton 
                    android:id="@+id/main_booking"
                    android:background="@drawable/main_booking"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/desc"/>
                <ImageButton 
                    android:id="@+id/main_mytrip"
                    android:background="@drawable/main_mytrip"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/desc"/>
                <ImageButton 
                    android:id="@+id/main_member"
                    android:background="@drawable/main_member"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc"/>
            </TableRow>
            <TableRow >
                <TextView 
                    android:id="@+id/booking_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_text"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="30dp"/>
                <TextView 
                    android:id="@+id/mytrip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/mytrip_text"/>
                <TextView 
                    android:id="@+id/member_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/member_text"/>
            </TableRow>
            <TableRow 
                android:layout_marginTop="40dp">
                <ImageButton 
                    android:id="@+id/main_tripguide"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/main_tripguide"
                    android:layout_marginRight="30dp"
                    android:contentDescription="@string/desc"/>
                <ImageButton 
                    android:id="@+id/main_planeinfo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/main_planeinfo"
                    android:contentDescription="@string/desc"/>
                <ImageButton 
                    android:id="@+id/main_setting"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/main_setting"
                    android:contentDescription="@string/desc"/>
            </TableRow>
            <TableRow >
                <TextView 
                    android:id="@+id/tripguide_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripguide_text"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="30dp"/>
                <TextView 
                    android:id="@+id/planeinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planeinfo_text"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="30dp"/>
                <TextView 
                    android:id="@+id/setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_text"
                    android:textColor="#FFFFFF"/>
            </TableRow>
            
        </TableLayout>
        
    </LinearLayout>
</RelativeLayout>